--- a/package.json
+++ b/package.json
@@ -1,77 +1,35 @@
 {
-  "name": "plustest",
-  "description": "plustest",
-  "version": "2.0.0",
+  "name": "bytetech",
+  "version": "2.1.0",
+  "description": "-- AWESOMENESS --",
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/then/fs.git"
-  },
-  "keywords": [
-    "promise",
-    "then",
-    "fs",
-    "core"
-  ],
-  "author": "Nathan Zadoks",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/then/fs/issues"
-  },
-  "devDependencies": {
-    "bash-color": "0.0.3"
-  },
   "dependencies": {
-    "@jarvisaoieong/node-google-translate-free": "^0.2.0",
-    "after": "^0.8.2",
-    "argument": "0.0.2",
-    "array-sort": "^0.1.4",
     "ascii-data-table": "^2.1.1",
-    "asciify": "^1.3.5",
-    "canvas": "1.6.10",
-    "cheerio": "^1.0.0-rc.2",
-    "common-tags": "^1.6.0",
-    "concat-stream": "^1.6.0",
+    "canvas": "^1.6.10",
     "dateformat": "^3.0.3",
-    "discord.js": "^11.4.2",
-    "distance-calculator": "^1.0.2",
-    "events.js": "^0.1.4",
-    "ffmpeg-binaries": "3.2.2-3",
-    "figlet": "^1.2.0",
-    "file-system": "^2.2.2",
-    "free-google-image-search": "^1.0.0",
-    "fs": "0.0.1-security",
+    "discord.js": "^11.3.2",
+    "express": "^4.16.3",
+    "ffmpeg": "0.0.4",
+    "ffmpeg-binaries": "^3.2.2-3",
+    "fs": "0.0.2",
     "get-youtube-id": "^1.0.0",
-    "goo.gl": "^0.1.4",
-    "google-image-search-url-results": "^1.0.1",
-    "google-translate-api": "^2.3.0",
-    "google-translate-api-plus": "^1.0.1",
-    "guild": "^1.2.2",
     "jimp": "^0.2.28",
-    "list": "^2.0.16",
-    "lizard-facts": "^1.0.3",
-    "math-expression-evaluator": "^1.2.17",
     "moment": "^2.22.1",
-    "moment-duration-format": "^2.2.2",
     "ms": "^2.1.1",
-    "node-google-image-search": "^1.0.3",
-    "node-opus": "0.2.7",
-    "nodemon": "^1.13.3",
     "opusscript": "0.0.6",
-    "pornhub": "0.0.5",
-    "pornsearch": "^2.2.5",
-    "pretty-ms": "^3.1.0",
-    "request": "^2.88.0",
-    "short-number": "1.0.6",
-    "simple-youtube-api": "5.0.1",
-    "snekfetch": "^3.6.1",
-    "superagent": "^4.0.0-beta.5",
-    "table": "^4.0.3",
+    "quick.db": "^6.2.0",
+    "request": "^2.85.0",
+    "simple-youtube-api": "^5.0.2",
+    "snekfetch": "^3.6.4",
+    "sqlite": "^2.9.1",
+    "sqlite3": "^4.0.0",
     "youtube-info": "^1.2.0",
-    "ytdl-core": "0.20.2",
-    "zalgolize": "1.2.4"
+    "ytdl-core": "^0.20.3"
+  },
+  "engines": {
+    "node": "8.4.0"
   }
 }
